--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "swr": "^1.3.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
